--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 #+title: Oh Hi There!
 
-### Hi there 👋
+<!-- ### Hi there 👋
 
 <!--
 **madhavan-raja/madhavan-raja** is a ✨ _special_ ✨ repository because its `README.md` (this file) appears on your GitHub profile.
@@ -15,4 +15,4 @@ Here are some ideas to get you started:
 - 📫 How to reach me: ...
 - 😄 Pronouns: ...
 - ⚡ Fun fact: ...
--->
+--> -->
